padding issue on front page on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,7 +71,6 @@ a {
   padding-top: 30px; }
 
 .welcome {
-  padding: 50px 0 50px;
   color: white; }
   .welcome h2 {
     padding-bottom: 30px; }
