--- a/resources/assets/sass/_global-styles.scss
+++ b/resources/assets/sass/_global-styles.scss
@@ -88,7 +88,6 @@ a{
 }
 .welcome{
 
-	padding:50px 0 50px;
 	color:white;
 	h2{
 		padding-bottom:30px;
